# Shared wire protocol for Rayland. A LIBRARY, so per policy it is LGPL-3.0-or-later.
[package]
name = "rayland-wire"
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
description = "Rayland's on-the-wire command messages and framing (SP0)."
license = "LGPL-3.0-or-later"
repository = "https://github.com/perpetualbits/rayland"

[dependencies]
serde = { workspace = true }          # derive Serialize/Deserialize on the message types
postcard = { workspace = true }       # the concrete serialization format
thiserror = { workspace = true }      # used by the framing module (Task 2)
